fix: set overflow to hidden

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,6 +15,7 @@ body {
   font-size: 1.6rem;
   color: #777;
   line-height: 1.6;
+  overflow: hidden;
 }
 
 .container {
